fluxo de quiz em aplicacao e novo teste BDD passando com outros